# tg_traiding_bot

./: data_loader.py  database.py  main.py  pyproject.toml
