[project]
name = "tg-traiding-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Slava",email = "uvarivskiyslava@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "yfinance (>=0.2.54,<0.3.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

